--- a/index.html
+++ b/index.html
@@ -7,3 +7,6 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css" href="java.js">
 </head>
+
+  
+ <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
