--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 <h1>リダイレクト</h1>
-  <iframe src="https://embed.lottiefiles.com/animation/89178"></iframe>
+
+  
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets8.lottiefiles.com/packages/lf20_2svadkl0.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+  
+  
 <p>リダイレクトします。しばらくお待ちください。。<br>
 ジャンプしない場合は、以下のURLをクリックしてください。</p>
 <p><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">移転先のページ</a></p>
