--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -9,8 +9,7 @@
 <h1>リダイレクト</h1>
 
   
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets8.lottiefiles.com/packages/lf20_2svadkl0.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+  <iframe src="https://embed.lottiefiles.com/animation/89178"></iframe>
   
   
 <p>リダイレクトします。しばらくお待ちください。。<br>
