--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -4,15 +4,16 @@
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="50000;URL=https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">
 <title>リダイレクト</title>
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 <h1>リダイレクト</h1>
 
   
-  <iframe src="https://embed.lottiefiles.com/animation/89178"></iframe>
+
   
   
-<p>リダイレクトします。しばらくお待ちください。。<br>
+<p>リダイレクトします。しばらくお待ちください。<br>
 ジャンプしない場合は、以下のURLをクリックしてください。</p>
 <p><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">移転先のページ</a></p>
 </body>
