--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   
   
  <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
-<a href="/buttons/62" class="bn62" onclick="gate();">
+<a class="bn62" onclick="gate();">
   Button
 </a>
