--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
   
  <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
 <a class="bn62" onclick="gate();">
-  Button
+  パスワードを入力する
 </a>
