--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   
   
  <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
+  
 <a class="bn62" onclick="gate();">
-  パスワードを入力する
+  <div class="passbox">
+  　<h2>パスワードを入力する<h2>
+  </div>
 </a>
