--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 </script>
   
   
-  
+<h2 style="text-align:center">さらぼる関係者用のページです</h2>
+  <h3 style="text-align:center">入るにはパスワードを入力してください</h3>
+
+ 
 <a class="bn62" onclick="gate();">
   <div class="passbox">
   　<h2>パスワードを入力する<h2>
