--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <h3 style="text-align:center">入るにはパスワードを入力してください</h3>
 
  
+<div class="passbox">
+  <h2>パスワードを入力</h2>
+  </div>
+  
 <a class="bn62" onclick="gate();">
   <div class="passbox">
   　<h2>パスワードを入力する<h2>
