--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
   <h4 style="text-align:center">入るにはパスワードを入力してください</h4>
 
  
-<div class="passbox">
+<div class="passbox" onclick="gate();">
   <h2>パスワードを入力</h2>
   </div>
   
-<a class="bn62" onclick="gate();">
-  <div class="passbox">
-  　<h2>パスワードを入力する<h2>
-  </div>
-</a>
