--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -6,14 +6,14 @@
 <title>リダイレクト</title>
 </head>
 <body>
-<h1>リダイレクト</h1>
+<h1 style="text-align:center">リダイレクト</h1>
 
   
 
   
   
-<p>リダイレクトします。しばらくお待ちください。<br>
+<p style="text-align:center">リダイレクトします。しばらくお待ちください。<br>
 ジャンプしない場合は、以下のURLをクリックしてください。</p>
-<p><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">移転先のページ</a></p>
+<p style="text-align:center"><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">移転先のページ</a></p>
 </body>
 </html>
