--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -9,7 +9,7 @@
 <h1 style="text-align:center">リダイレクト</h1>
 
   
-
+<div class="loader">Loading...</div>
   
   
 <p style="text-align:center">リダイレクトします。しばらくお待ちください。<br>
