--- a/xFVfTx5zE8CX.html
+++ b/xFVfTx5zE8CX.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="50000;URL=https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">
 <title>リダイレクト</title>
+  <link rel="stylesheet" href="https://hata-ych.github.io/verification/stylesheet.css" />
 </head>
 <body>
 <h1 style="text-align:center">リダイレクト</h1>
