--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>認証</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://hata-ych.github.io/verification/stylesheet.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
   
@@ -20,7 +21,8 @@
 <h1 style="text-align:center">さらぼる関係者用のページです</h1>
   <h4 style="text-align:center">入るにはパスワードを入力してください</h4>
 
- 
+<i class="fa fa-camera-retro"></i>
+
 <div class="passbox" onclick="gate();">
   <h2 style="text-align:center">パスワードを入力</h2>
   </div>
