--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <h1 style="text-align:center">さらぼる関係者用のページです</h1>
   <h4 style="text-align:center">入るにはパスワードを入力してください</h4>
 
-<i class="fa fa-camera-retro"></i>
-
+<i class="fa-solid fa-lock" style="text-align:center"></i>
+  
 <div class="passbox" onclick="gate();">
   <h2 style="text-align:center">パスワードを入力</h2>
   </div>
