--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <i class="fa-solid fa-lock" style="text-align:center"></i>
   
-<div class="passbox" onclick="gate();">
-  <h2 style="text-align:center">パスワードを入力</h2>
-  </div>
-  
+<div class="passbox">  
+  <div onclick="gate();">
+    <h2 style="text-align:center">パスワードを入力</h2>
+   </div>
+</div>
