--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html lang="ja">
+
+<html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="50000;URL=https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>認証</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://hata-ych.github.io/verification/stylesheet.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<meta http-equiv="refresh" content="3;URL=https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">
 <title>リダイレクト</title>
   <link rel="stylesheet" href="https://hata-ych.github.io/verification/stylesheet.css" />
 </head>
+  
+  
 <body>
 <h1 style="text-align:center">リダイレクト</h1>
 
