--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -15,6 +15,14 @@
   
 <body>
 <h1 style="text-align:center">リダイレクト</h1>
+  
+  
+<!-- GRADIENT SPINNER -->
+<div class="spinner-box">
+  <div class="circle-border">
+    <div class="circle-core"></div>
+  </div>  
+</div>
 
   
 <p style="text-align:center">リダイレクトします。しばらくお待ちください。<br>
