--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -18,11 +18,10 @@
   
   
 <!-- GRADIENT SPINNER -->
-<div class="spinner-box">
-  <div class="circle-border">
-    <div class="circle-core"></div>
-  </div>  
-</div>
+<main class="wrapper">
+  <section class="container">
+    <div class="loader-1"></div>
+  </section>
 
   
 <p style="text-align:center">リダイレクトします。しばらくお待ちください。<br>
