--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -19,7 +19,7 @@
   
 <!-- GRADIENT SPINNER -->
 <main class="wrapper">
-  <section class="container">
+  <section class="container" style="text-align:center">
     <div class="loader-1"></div>
   </section>
 
