--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -25,7 +25,7 @@
 
   
 <p style="text-align:center">リダイレクトします。しばらくお待ちください。<br>
-ジャンプしない場合は、以下のURLをクリックしてください。</p>
+ジャンプしない場合は、以下をクリックしてください。</p>
 <p style="text-align:center"><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">転送先ページ</a></p>
 </body>
 </html>
