--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -14,7 +14,7 @@
   
   
 <body>
-<h1 style="text-align:center">リダイレクト</h1>
+<h1 style="text-align:center">リダイレクト中...</h1>
   
   
 <!-- GRADIENT SPINNER -->
@@ -24,7 +24,7 @@
   </section>
 
   
-<p style="text-align:center">リダイレクトします。しばらくお待ちください....<br>
+<p style="text-align:center">認証が完了しました。<br>さらぼるスタッフページにリダイレクトしています。しばらくお待ちください...<br>
 ジャンプしない場合は、以下をクリックしてください。</p>
 <p style="text-align:center"><a href="https://saladball.studio.site/adminpage/xFVfTx5zE8CXhujgYUQ5kfEeN9jKkZeWTTcK">転送先ページ</a></p>
 </body>
