--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://hata-ych.github.io/verification/stylesheet.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
 
   
@@ -27,3 +28,11 @@
     <h2 style="text-align:center">パスワードを入力</h2>
    </div>
 </div>
+
+  
+  <form method="GET">
+	<div class="g-recaptcha" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
+	<p><label>名前</label></p>
+	<p><input type="text" name="text-01"></p>
+	<p><input type="submit" value="送信"></p>
+</form>
