--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 document.getElementById("pw").style.display ="none";
 
 function clickBtn1(){
-	const p1 = document.getElementById("pw");
+	const pw = document.getElementById("pw");
 
 	if(p1.style.display=="block"){
 		// noneで非表示
