--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ document.getElementById("pw").style.display ="none";
 function clickBtn1(){
 	const pw = document.getElementById("pw");
 
-	if(p1.style.display=="block"){
+	if(pw.style.display=="block"){
 		// noneで非表示
-		p1.style.display ="none";
+		pw.style.display ="none";
 	}else{
 		// blockで表示
-		p1.style.display ="block";
+		pw.style.display ="block";
 	}
 }
 </script>
