--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	
 
 <script>
+document.getElementById("target").style.visibility ="hidden";
+
 function changeDisplay(){
   var str = document.getElementById("target");
   if(str.style.display == "none"){
@@ -43,4 +45,4 @@ function changeDisplay(){
 }
 </script>
 	
-	<div class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
+	<div style="text-align:center" class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
