--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	
 
 <script>
-var strb = document.getElementById("target")
-  if(strb.style.display == "block"){
-	  strb.style.display = "none";}
+window.onload = function(){
+str.style.display = "none";
+}
 
 function changeDisplay(){
   var str = document.getElementById("target");
