--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 	
 
 <script>
-window.onload = function(){
-var str = document.getElementById("target");
-str.style.display = "none";
-}
+document.getElementById("target").style.display ="none";
 
 function changeDisplay(){
   var str = document.getElementById("target");
