--- a/index.html
+++ b/index.html
@@ -45,4 +45,7 @@ function changeDisplay(){
 }
 </script>
 	
-	<div style="text-align:center" class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
+
+<div style="text-align:center">
+<div class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
+</div>
