--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@ function changeDisplay(){
 </script>
 	
 
-<div style="text-align:center">
+<div class="captchabox">
 <div class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
 </div>
