--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="passbox">  
   <div onclick="gate();">
-    <h2 id="target" style="text-align:center">パスワードを入力</h2>
+    <h2 id="target" style="text-align:center">パスワードを入力する</h2>
    </div>
 </div>
 
