--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   
 <h1 style="text-align:center">さらぼる関係者用のページです</h1>
-  <h4 style="text-align:center">入るにはパスワードを入力してください</h4>
+  <h4 style="text-align:center">入るにはパスワードが必要です</h4>
 
 
 <div class="passbox">  
