--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@ function changeDisplay(){
 
 	
 <div class="captchabox">
-<div class="g-recaptcha" data-callback="changeDisplay" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
+<div class="g-recaptcha" data-callback="gate" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
 </div>
