--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
    }
 </script>
   
-  
-<h1 style="text-align:center">さらぼる関係者用のページです</h1>
-  <h4 style="text-align:center">入るにはパスワードが必要です</h4>
-
+<div class=titlebox>
+<h1 style="text-align:center">page</h1>
+  <h4 style="text-align:center">title</h4>
+</div>
+	
 
 <div class="passbox">  
   <div onclick="gate();">
@@ -45,7 +46,7 @@ function changeDisplay(){
 </script>
 
 
-	
+
 <div class="captchabox">
 <div class="g-recaptcha" data-callback="gate" data-sitekey="6LeY9PsUAAAAAGpHXGEYqULXfXOKqpyyCw9mUub5"></div>
 </div>
