--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="passbox">  
   <div onclick="gate();">
-    <h2 id="target" style="text-align:center">パスワードを入力する</h2>
+    <h2 id="target" style="text-align:center">パスワードを入力する...</h2>
    </div>
 </div>
   
