--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script>
   
 <div class=titlebox>
-<h1 style="text-align:center">page</h1>
+<h1 style="text-align:center">page1</h1>
   <h4 style="text-align:center">title</h4>
 </div>
 	
