--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </script>
   
 <div class=titlebox>
-<h1 style="text-align:center">page1</h1>
-  <h4 style="text-align:center">title</h4>
+<h1 style="text-align:center">さらぼる関係者ページ</h1>
+  <h4 style="text-align:center">アクセスにはパスワードが必要です</h4>
 </div>
 	
 
