--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 <div class=titlebox>
 <h1 style="text-align:center">さらぼる関係者ページ</h1>
-  <h4 style="text-align:center">アクセスにはパスワードが必要です</h4>
+  <h4 style="text-align:center">アクセスにはパスワードが必要です.</h4>
 </div>
 	
 
