--- a/sb-staffpage.html
+++ b/sb-staffpage.html
@@ -14,7 +14,7 @@
   
   
 <body>
-<h1 style="text-align:center">リダイレクト中...</h1>
+<h1 style="text-align:center">リダイレクト中..</h1>
   
   
 <!-- GRADIENT SPINNER -->
